# Bob

./: .aider.chat.history.md  .aider.input.history  .gitignore  BRAIN_INTEGRATION_COMPLETE.md  CHAT_READY.md  CLAUDE_DESKTOP_VISION.md  CONTROL_CENTER_ARCHITECTURE.md  MEMORY_SYSTEM_FIXED.md  OLLAMA_CLIENT_REFACTOR_COMPLETE.md  PHASE_4_COMPLETE.md  PROJECT_STRUCTURE.md  PROPER_VISION.md  PROTOCOL_FIX_SUMMARY.md  README.md  REPL_GUIDE.md  SYSTEM_MESSAGE.md  TESTABLE_TOOLS_GUIDE.md  TESTING_GUIDE.md  __main__.py  bob  bob.py  bob_api.py  bob_brain_init.py  bob_brain_intelligence.py  bob_brain_repl.js  bob_chat_repl.js  bob_chat_repl.js.backup  bob_cli.py  bob_memory_intelligence.py  bob_memory_protocol.py  bob_memory_protocol.py.bak  bob_memory_validator.py  bob_ollama_bridge.py  bob_ollama_bridge.py.bak  bob_semantic_memory.py  bob_simple.py  chat  debug_bob.py  init_database.py  job_queue_dashboard.jsx  (+30 more)
.aider.tags.cache.v4/: cache.db
agents/: base_agent.py
archive/: reasoning roadmap.txt
config/: settings.py
continuation-notes/: continuation-2025-08-21_031351442.md  continuation-2025-08-21_180841337.md  continuation-2025-08-22_142653140.md  continuation-2025-08-22_143718147.md  continuation-2025-08-28_203153447.md  continuation-2025-08-28_203637536.md  continuation-2025-08-28_204856444.md  continuation-2025-08-28_210101459.md  continuation-2025-08-28_212252796.md  continuation-2025-08-28_212445213.md  continuation-2025-08-28_214132658.md  continuation-2025-08-28_215722644.md  continuation-2025-08-29_001128864.md  continuation-2025-08-29_002820900.md  continuation-2025-08-29_010136236.md  continuation-2025-08-29_010318905.md  continuation-2025-08-29_011018252.md  continuation-2025-08-29_012654240.md  continuation-2025-08-29_014037409.md  continuation-2025-08-29_015201832.md  continuation-2025-08-29_015726002.md  continuation-2025-08-29_021248075.md  continuation-2025-08-29_180551347.md  continuation-2025-08-29_181133057.md  continuation-2025-08-29_190738788.md  continuation-2025-08-29_190946829.md  continuation-2025-08-29_191752374.md  continuation-2025-08-29_192746802.md
core/: __init__.py  bob_agent.py  bob_agent_integrated.py  context_assembler.py  database_core.py  filesystem_core.py  filesystem_core_monolithic.py.bak  knowledge_manager.py  ollama_client.py
core/agent/: __init__.py  context_assembler.py  intelligence_loop.py  knowledge_manager.py  orchestrator.py  response_generator.py
core/context/: __init__.py  assembly.py  memory.py  relevance.py  sources.py  state.py
core/contracts/: __init__.py  api_contracts.py
core/filesystem/: __init__.py  async_ops.py  metrics.py  operations.py  validation.py
core/intelligence/: mock_api_client.py  self_awareness.py
core/job_system/: manager.py  models.py
core/ollama/: __init__.py  models.py  (+4 more)
docs/: ANTI_HALLUCINATION_GUIDELINES.md  BOB_BRAIN_INIT_SYSTEM.md  BOB_DEPLOYMENT_ARCHITECTURE.md  BOB_INTERFACE_SPECIFICATION.md  DATABASE_SCHEMA.md  DUAL_MODE_INTERFACE.md  EMAIL_INTEGRATION_ARCHITECTURE.md  GITHUB_REPOSITORY_STATUS.md  HOW_WE_CREATED_BOB.md  JOB_CENTRIC_ARCHITECTURE.md  MODULAR_ARCHITECTURE.md  SYSTEM_INSTRUCTIONS_UPDATED.md  SYSTEM_MESSAGE_TEMPLATE.md  arc_usage.md  framework_usage.md
documentation/: README.md
feedback/: architectural_ideas.md  ui_suggestions.md
integrations/: __init__.py
intelligence/: __init__.py  context_assembler.py  reflection_engine.py
interfaces/: __init__.py  api_interface.py  cli_interface.py
protocols/: MASTER_PROTOCOL_INDEX.md  __init__.py  async_protocol_engine.py
scripts/: batch_create_repos.sh  create_github_repos.sh
src/: test_arc_biases.py
tests/: test_bob_agent_integrated_working.py  test_context_assembler.py  test_database_core.py  test_filesystem_core.py  test_interfaces.py  test_job_manager.py  test_knowledge_manager.py  test_ollama_client.py  test_ollama_modular.py  test_phase3_architecture_validation.py  test_reflection_engine.py
tools/: bob_brain_init_mcp.py  manage_keys.py  non_blocking_git_push.py
(+115 files in other folders)
